--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-  <h1 style="color:#fff;">I made this for you dear UD</h1>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press Any Key to Start</h1>
   <div class="container">
     <div lass="row">
 
